Get методы /new, /move и /undo переделаны в Post, обновлена спецификация OpenApi
